# stock-bot

./: Makefile  README.md  package-lock.json  package.json  roadmap.md  tsconfig.json
.github/workflows/: build-test.yml
backtest/: README.md  pyproject.toml
backtest/backtest/: optimize_sma.py  trade_sma.py
backtest/tests/: test_backtest.py
backtests/top-gainer/: requirements.txt  top-gainer-back-test.py
conf/: dev.js  qa-twitter.js  qa.js  test.js
lib/: base.js  base.ts  broker.js  broker.ts  confidence-score.js  confidence-score.ts  data-source.js  data-source.ts  data-store.js  data-store.ts  diagnostic.js  diagnostic.ts  exceptions.js  exceptions.ts  exchange.js  exchange.ts  metrics.js  metrics.ts  notification.js  notification.ts  stock-bot.js  stock-bot.ts  util.js  util.ts  workers.js  workers.ts
resources/: prometheus.yml  tickers.txt
resources/scripts/: generate-plot.py
test/: base.js  base.ts  broker.js  broker.ts  data-source.js  data-source.ts  data-store.js  data-store.ts  diagnostic.js  diagnostic.ts  exchange.js  exchange.ts  metrics.js  metrics.ts  stock-bot.js  stock-bot.ts  util.js  util.ts  workers.js  workers.ts
types/: base.ts  index.js  index.ts  polygonAggregates.ts  polygonMarketHolidays.ts  polygonSnapshot.ts
