[tool.poetry]
name = "backtest"
version = "0.1.0"
description = ""
authors = ["Swaraj Rao <swrjrao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
backtrader = "^1.9.76"
matplotlib = "3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
